syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

message AddressPb {
    string homeNo = 1;
    string street = 2;
    string landMark = 3;
    string city = 4;
    string state = 5;
    int32 pincode = 6;
}



