syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "entityPb.proto";
import "timePb.proto";
import "summaryPb.proto";
import "customerPb.proto";


message LoginPb {
    EntityPb dbInfo = 1;
    CustomerPbRef customerRef =2;
    TimePb time = 3;
    string mobileNo =4;
}

message LoginSearchRequestPb {
    string mobileNo =1;
}

message LoginSearchResponsePb {
    SummaryPb summary = 1;
    repeated LoginPb results = 2;
}


